--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,6 +7,7 @@
     display: flex;
     justify-content: space-between;
     padding: 1% 2%;
+    
     .header-title {
       display: flex;
       flex-basis: 50%;
@@ -18,7 +19,8 @@
       }
       .title {
         text-align: center;
-        padding: 1.5%;
+        padding: 0.6rem;
+        font-size: 1.5rem;
         color: $primary-color;
       }
     }
