--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -7,19 +7,21 @@
     display: flex;
     justify-content: space-between;
     padding: 1% 2%;
+
     .header-title {
       display: flex;
       flex-basis: 50%;
       .img-container {
         padding: 0;
-        img {
+        .header-logo {
           width: 120px;
         }
       }
       .title {
         text-align: center;
-        padding: 1.5%;
-        color: $primary-color;
+        padding: 0.6rem;
+        font-size: 1.5rem;
+        color: $primary-dark-blue-color;
       }
     }
     .convertor-div {
@@ -29,7 +31,7 @@
       .lang-icon {
         margin-top: 0.8rem;
       }
-      select {
+      .header-select {
         border: none;
         background-color: $white-color;
         margin-right: 20%;
