--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,22 +1,27 @@
 @import "../../styles/variables.scss";
 
-.footer {
-  background-color: $primary-dark-blue-color;
-  display: flex;
-  justify-content: space-between;
-  .footer-logo {
-    padding: 1% 2%;
-    .footer-img {
-      width: 120px;
-      filter: brightness(0) invert(1);
+.footer-container {
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  .footer {
+    background-color: $primary-dark-blue-color;
+    display: flex;
+    justify-content: space-between;
+    .footer-logo {
+      margin: 1% 2%;
+      .footer-img {
+        width: 120px;
+        filter: brightness(0) invert(1);
+      }
     }
-  }
-  .footer-content {
-    width: auto;
-    padding: 1% 2%;
-    .footer-text {
-      color: $white-color;
-      padding-bottom: 1%;
+    .footer-content {
+      width: auto;
+      padding: 1% 2%;
+      .footer-text {
+        color: $white-color;
+        padding-bottom: 1%;
+      }
     }
   }
 }
