--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -2,9 +2,8 @@
 
 .search-container {
   width: 100%;
-  height: 70vh;
+  height: 65vh;
   margin-top: 0;
-  background-color: #5D5D5D;
   padding-top: 2rem;
   .form {
     width: 25%;
@@ -19,21 +18,19 @@
     }
     .guest-room-container {
       display: flex;
-    }
-    .checkbox-container{
+      flex-wrap: wrap;
+      .checkbox-container {
         margin: 0 1rem;
-    }
-    .btn-container {
-        text-align: center;
-      .btn-submit {
-        text-align: center;
-        margin: 3rem 0;
-        padding: 0.8rem 1.5rem;
-        background-color: $primary-dark-blue-color;
-        color: $white-color;
-        text-transform:uppercase;
-        border-radius: 5px;
       }
+    }
+
+    .btn-submit {
+      margin: 3rem 38%;
+      padding: 0.8rem 1.5rem;
+      background-color: $primary-dark-blue-color;
+      color: $white-color;
+      text-transform: uppercase;
+      border-radius: 5px;
     }
   }
 }
