--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -19,8 +19,25 @@
     .guest-room-container {
       display: flex;
       flex-wrap: wrap;
+      width: 100%;
+      .guest-container {
+        width: 50.5%;
+        padding-right: 4%;
+      }
+      .full-guest {
+        width: 94%;
+      }
+      .room-container {
+        width: 40%;
+        padding-left: 4%;
+      }
+      .full-room {
+        width: 30%;
+        padding-left: 0;
+      }
       .checkbox-container {
-        margin: 0 1rem;
+        width: 55%;
+        margin-left: 1rem;
       }
     }
 
