Added language conversion for search form

--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -36,7 +36,7 @@
         padding-left: 0;
       }
       .checkbox-container {
-        width: 55%;
+        width: auto;
         margin-left: 1rem;
       }
     }
