updated calender validation and frontend test cases

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -14,6 +14,10 @@
         width: 120px;
         filter: brightness(0) invert(1);
       }
+      .logo{
+        color: white;
+        font-size: 2rem;
+      }
     }
     .footer-content {
       width: auto;
