--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -42,7 +42,7 @@
     }
 
     .btn-submit {
-      margin: 3rem 38%;
+      margin: 10% 38%;
       padding: 0.8rem 1.5rem;
       background-color: $primary-dark-blue-color;
       color: $white-color;
