--- a/src/components/RoomResultPage/SearchForm/SearchForm.scss
+++ b/src/components/RoomResultPage/SearchForm/SearchForm.scss
@@ -1,4 +1,9 @@
 .search-containers{
     display: flex;
     width: 100%;
+    .room-submit{
+        margin: 1rem;
+        height: fit-content;
+        padding: 1.5rem 1rem;
+    }
 }
