--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,3 +1,9 @@
 $primary-dark-blue-color:#26266D;
 $white-color:#fff;
 $red-color:#d0182b;
+$primary-border-grey:#5d5d5d;
+$primary-navy-blue:#5757C4;
+$white:#fff;
+$calender-background-grey:#c0c3c2;
+$black:#000000;
+$border-line-grey:#C1C2C2;
