--- a/src/components/RoomResultPage/RoomResultPage.scss
+++ b/src/components/RoomResultPage/RoomResultPage.scss
@@ -30,27 +30,15 @@
     }
   }
 }
-path {
-    //  display: none!important;
-  }
-// .MuiStepLabel-iconContainer{
-//     &::before {
-//         content: "✔";
-//         position: absolute;
-//         z-index: 1;
-//         left: 47%;
-//         color: white;
-//       }
-// }
+
 .MuiStepLabel-horizontal{
 & > .Mui-active {
     &::before {
-    //   content: "✔";
-      background-image: url("");
+      content: "✔";
       position: absolute;
       z-index: 100;
       left: 47%;
-      color: white;
+      color: $white;
       background-color: inherit;
       width: 3rem;
     }
