--- a/src/components/RoomResultPage/SearchForm/SearchForm.scss
+++ b/src/components/RoomResultPage/SearchForm/SearchForm.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/variables.scss';
+
 .search-containers{
     display: flex;
     width: 100%;
@@ -5,5 +7,6 @@
         margin: 1rem;
         height: fit-content;
         padding: 1.5rem 1rem;
+        background-color: $primary-dark-blue-color;
     }
 }
