--- a/src/components/RoomResultPage/RoomCards/Card/Card.scss
+++ b/src/components/RoomResultPage/RoomCards/Card/Card.scss
@@ -1,7 +1,15 @@
-@import '../../../../styles/variables.scss';
+@import "../../../../styles/variables.scss";
 
+.cards {
+  width: 350px;
+  max-width: 420px;
+  flex:1;
+  border: 1px solid #eff0f1;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
+  border-radius: 5px;
+  margin: 1% 2% 0 1.2%;
+}
 .carousel-container {
-  height: 100%;
   width: 100%;
 }
 .room-name-heading {
@@ -12,11 +20,10 @@
     margin: 2% 2.5%;
   }
   .property-rating {
-    background-color: $primary-navy-blue;
-    height: fit-content;
-    border-radius: 5px;
-    margin: 2.2%;
-    padding: 1% 2%;
+  display: flex;
+  align-items: center;
+  margin: 2% 1.3%;
+  padding-right: 2%;
   }
 }
 .logo-div {
@@ -25,20 +32,20 @@
   align-items: center;
   margin: 2% 1.3%;
 }
-.room-size{
-    margin: 2% 2.5%;
-    justify-content: start;
-    .room-type{
-        font-style: italic;
-        padding-right: 2%;
-    }
+.room-size {
+  margin: 2% 2.5%;
+  justify-content: start;
+  .room-type {
+    font-style: italic;
+    padding-right: 2%;
+  }
 }
 
-.per-night-div{
-    color: $primary-border-grey;
-    margin: 2% 2.5%;
+.per-night-div {
+  color: $primary-border-grey;
+  margin: 2% 2.5%;
 }
-.button-select{
-    background-color: $primary-dark-blue-color!important;
-    margin: 2%!important;
+.button-select {
+  background-color: $primary-dark-blue-color !important;
+  margin: 2% !important;
 }
