--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -5,6 +5,7 @@
   height: 65vh;
   margin-top: 0;
   padding-top: 2rem;
+  margin-bottom: 17vh;
   .form {
     width: 25%;
     background-color: $white-color;
