--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,6 +4,7 @@
   // position: fixed;
   // bottom: 0;
   width: 100%;
+  height:84px;
   .footer {
     background-color: $primary-dark-blue-color;
     display: flex;
