--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -1,11 +1,13 @@
 @import "../../styles/variables.scss";
 
+.container{
+  min-height: calc(100vh - 168px);
+}
 .search-container {
   width: 100%;
   height: 65vh;
   margin-top: 0;
   padding-top: 2rem;
-  margin-bottom: 17vh;
   .form {
     width: 25%;
     background-color: $white-color;
