Added modal for room details

--- a/src/components/RoomResultPage/RoomCards/Card/Card.scss
+++ b/src/components/RoomResultPage/RoomCards/Card/Card.scss
@@ -50,4 +50,5 @@
 .button-select {
   background-color: $primary-dark-blue-color !important;
   margin: 2% !important;
+  margin-bottom: 4% !important;
 }
