--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,10 +1,10 @@
 @import "../../styles/variables.scss";
 
 .footer-container {
-  // position: fixed;
-  // bottom: 0;
+  position: fixed;
+  bottom: 0;
   width: 100%;
-  height:84px;
+  height: 84px;
   .footer {
     background-color: $primary-dark-blue-color;
     display: flex;
@@ -15,7 +15,7 @@
         width: 120px;
         filter: brightness(0) invert(1);
       }
-      .logo{
+      .logo {
         color: white;
         font-size: 2rem;
       }
