--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -17,6 +17,7 @@
     .header-title {
       display: flex;
       flex-basis: 50%;
+      margin-left: 2.5rem;
       .img-container {
         .header-logo {
           width: 120px;
