Added iteraanry for checkout page

--- a/src/components/RoomResultPage/BedTypeForm/BedTypeForm.scss
+++ b/src/components/RoomResultPage/BedTypeForm/BedTypeForm.scss
@@ -1,7 +1,8 @@
-.filter-container{
-    background-color: #eff0f1;
-    padding: 2rem;
-    margin:2rem;
-    flex-basis: 20%;
-    height: fit-content;
+.filter-container {
+  background-color: #eff0f1;
+  padding: 2rem;
+  margin: 2rem;
+  flex-basis: 20%;
+  height: fit-content;
+  margin-left: 3%;
 }
