--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,12 +5,13 @@
   bottom: 0;
   width: 100%;
   height: 84px;
+  z-index: 100;
   .footer {
     background-color: $primary-dark-blue-color;
     display: flex;
     justify-content: space-between;
     .footer-logo {
-      margin: 1% 2%;
+      margin: 1% 5%;
       .footer-img {
         width: 120px;
         filter: brightness(0) invert(1);
@@ -23,6 +24,7 @@
     .footer-content {
       width: auto;
       padding: 1% 2%;
+      margin-right: 4%;
       .footer-text {
         color: $white-color;
         padding-bottom: 1%;
