--- a/src/components/RoomResultPage/RoomCards/Card/Card.scss
+++ b/src/components/RoomResultPage/RoomCards/Card/Card.scss
@@ -1,17 +1,18 @@
 @import "../../../../styles/variables.scss";
 
 .cards {
-  width: 350px;
+  min-width: 370px;
+  width: 370px;
   max-width: 420px;
-  flex:1;
+  flex: 1;
   border: 1px solid #eff0f1;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
-  margin: 1% 2% 0 1.2%;
+  margin: 1% 1% 1% 1%;
 }
 .carousel-container {
   width: 100%;
-  height:8rem;
+  height: 8rem;
 }
 .room-name-heading {
   display: flex;
@@ -22,10 +23,10 @@
     margin: 2% 2.5%;
   }
   .property-rating {
-  display: flex;
-  align-items: center;
-  margin: 2% 1.3%;
-  padding-right: 2%;
+    display: flex;
+    align-items: center;
+    margin: 2% 1.3%;
+    padding-right: 2%;
   }
 }
 .logo-div {
