--- a/src/components/RoomResultPage/RoomResultPage.scss
+++ b/src/components/RoomResultPage/RoomResultPage.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables.scss";
 
-body{
-  height:calc(100vh - 168px);
+body {
+  height: calc(100vh - 168px);
 }
 .room-banner {
   height: 10vh;
@@ -10,6 +10,7 @@ body{
   margin: 1% 3%;
   .body-container {
     display: flex;
+    margin-right: 3rem;
   }
 }
 .stepper-container {
@@ -27,15 +28,16 @@ body{
     .Mui-active > .MuiSvgIcon-fontSizeMedium {
       color: $red-color;
 
-      .MuiStepIcon-text,.MuiSvgIcon-root {
+      .MuiStepIcon-text,
+      .MuiSvgIcon-root {
         display: none;
       }
     }
   }
 }
 
-.MuiStepLabel-horizontal{
-& > .Mui-active {
+.MuiStepLabel-horizontal {
+  & > .Mui-active {
     &::before {
       content: "✔";
       position: absolute;
@@ -47,4 +49,3 @@ body{
     }
   }
 }
-
