--- a/src/components/RoomResultPage/SearchForm/SearchForm.scss
+++ b/src/components/RoomResultPage/SearchForm/SearchForm.scss
@@ -1,12 +1,14 @@
-@import '../../../styles/variables.scss';
+@import "../../../styles/variables.scss";
 
-.search-containers{
-    display: flex;
-    width: 100%;
-    .room-submit{
-        margin: 1rem;
-        height: fit-content;
-        padding: 1.5rem 1rem;
-        background-color: $primary-dark-blue-color;
-    }
+.search-containers {
+  display: flex;
+  width: 96%;
+  margin-left: 2%;
+
+  .room-submit {
+    margin: 1rem;
+    height: fit-content;
+    padding: 1.5rem 1rem;
+    background-color: $primary-dark-blue-color;
+  }
 }
