--- a/src/components/RoomResultPage/RoomCards/Card/Card.scss
+++ b/src/components/RoomResultPage/RoomCards/Card/Card.scss
@@ -35,6 +35,29 @@
   align-items: center;
   margin: 2% 1.3%;
 }
+.special_deal {
+  background-color: #26266d;
+  color: white;
+  width: 45%;
+  padding: 0.7rem;
+  font-size: 1.2rem;
+  position: relative;
+  margin-top: 1rem;
+}
+
+.special_deal::after {
+  content: "";
+  position: absolute;
+  width: 2rem;
+  height: 2rem;
+  top: 50%;
+  left: 100%;
+  margin-left: -1rem;
+  margin-top: -1rem;
+  transform: rotate(45deg);
+  background-color: white;
+}
+
 .room-size {
   margin: 2% 2.5%;
   justify-content: start;
