Added rate page

--- a/src/components/RoomResultPage/RoomCards/Card/Card.scss
+++ b/src/components/RoomResultPage/RoomCards/Card/Card.scss
@@ -76,3 +76,7 @@
   margin: 2% !important;
   margin-bottom: 4% !important;
 }
+.special_deal_desc {
+  margin-top: 1rem;
+  margin-left: 0.5rem;
+}
