--- a/src/components/Rating/Rating.scss
+++ b/src/components/Rating/Rating.scss
@@ -4,13 +4,20 @@
   justify-content: center;
   margin-top: 10%;
   flex-direction: column;
+  margin-bottom: 4vh;
 
-  h1 {
+  h1{
     margin-bottom: 1%;
+  }
+  .success {
+    margin-bottom: 15%;
   }
 
   .review {
     margin-top: 2%;
     padding: 0.5%;
+  }
+  .failure{
+    margin-bottom: 27%;
   }
 }
