--- a/src/components/RoomResultPage/BedTypeForm/Filters/Filter.scss
+++ b/src/components/RoomResultPage/BedTypeForm/Filters/Filter.scss
@@ -4,6 +4,7 @@
   border-style: none !important;
   box-shadow: none !important;
   border-bottom: 1px solid $border-line-grey !important;
+  padding-top: 3%!important;
 }
 .accordion-container:last-child {
   border-bottom: none !important;
