--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables.scss";
 
 .footer-container {
-  position: fixed;
+  position: static;
   bottom: 0;
   width: 100%;
   height: 84px;
@@ -24,7 +24,7 @@
     .footer-content {
       width: auto;
       padding: 1% 2%;
-      margin-right: 4%;
+      margin-right: 3%;
       .footer-text {
         color: $white-color;
         padding-bottom: 1%;
