--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -34,8 +34,8 @@
     }
     .convertor-div {
       display: flex;
-      flex-basis: 40%;
-      margin-left: 15%;
+      flex-basis: 41%;
+      margin-left: 14%;
       .booking {
         margin-right: 5rem;
         width: 10rem;
@@ -66,6 +66,7 @@
         padding: 0 2rem;
         border-radius: 5px;
         font-size: 0.8rem;
+        width: 7rem;
       }
     }
   }
