--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -12,12 +12,17 @@
     width: 25%;
     background-color: $white-color;
     border: 1px solid black;
-    margin: 0rem 4rem;
+    margin: 1rem 4rem;
+    margin-left: 5%;
     padding-top: 1rem;
     border-radius: 5px;
 
     .search-box {
       margin: 0.1rem 1.6rem 1rem 1.6rem;
+    }
+    .calender-alert{
+      margin: -1rem 0 0 1rem!important;
+      width: 90%;
     }
     .guest-room-container {
       display: flex;
