--- a/src/components/RoomResultPage/RoomCards/Card/Card.scss
+++ b/src/components/RoomResultPage/RoomCards/Card/Card.scss
@@ -1,15 +1,21 @@
 @import "../../../../styles/variables.scss";
+$width:370px;
 
 .cards {
-  min-width: 370px;
-  width: 370px;
-  max-width: 420px;
+  min-width: 400px;
+  width: 400px;
+  max-width: 400px;
   flex: 1;
   border: 1px solid #eff0f1;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
   margin: 1% 1% 1% 1%;
+  height:fit-content;
+  &:last-child{
+    margin-right: 0;
+  }
 }
+
 .carousel-container {
   width: 100%;
   height: 8rem;
@@ -28,6 +34,12 @@
     margin: 2% 1.3%;
     padding-right: 2%;
   }
+}
+.rating-count{
+  text-align: end;
+  padding-right:0.6rem;
+  margin-top: -0.5rem;
+  color: $primary-border-grey;
 }
 .logo-div {
   color: $primary-border-grey;
