--- a/src/components/RoomResultPage/RoomResultPage.scss
+++ b/src/components/RoomResultPage/RoomResultPage.scss
@@ -7,10 +7,10 @@ body {
   height: 10vh;
 }
 .form-container {
-  margin: 1% 3%;
+  margin: 1% 4.5%;
   .body-container {
     display: flex;
-    margin-right: 3rem;
+    margin-left: 0rem;
   }
 }
 .stepper-container {
@@ -33,6 +33,9 @@ body {
         display: none;
       }
     }
+   .MuiStepIcon-text{
+    display: none;
+   }
   }
 }
 
