--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -61,12 +61,13 @@
         }
       }
       .login-btn {
-        background-color: $primary-dark-blue-color;
-        color: $white-color;
-        padding: 0 2rem;
-        border-radius: 5px;
-        font-size: 0.8rem;
-        width: 7rem;
+        background-color: $primary-dark-blue-color!important;
+        color: $white-color!important;
+        padding: 1rem 2rem!important;
+        border-radius: 5px!important;
+        font-size: 0.8rem!important;
+        width: 7rem!important;
+        height: fit-content!important;
       }
     }
   }
