--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,3 +7,5 @@ $white:#fff;
 $calender-background-grey:#c0c3c2;
 $black:#000000;
 $border-line-grey:#C1C2C2;
+$checkout-background-grey:#EFF0F1;
+$checkout-border-grey:#c4c4c4;
