--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,3 +9,4 @@ $black:#000000;
 $border-line-grey:#C1C2C2;
 $checkout-background-grey:#EFF0F1;
 $checkout-border-grey:#c4c4c4;
+$confirmation-btn-blue:#006EFF;
