--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -23,6 +23,7 @@
       .img-container {
         .header-logo {
           width: 120px;
+          cursor: pointer;
         }
       }
       .title {
