--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -14,35 +14,48 @@
   .header {
     display: flex;
     justify-content: space-between;
-    padding: 1% 2%;
+    height: 100%;
+    align-items: center;
     margin-left: 1%;
     .header-title {
       display: flex;
-      flex-basis: 50%;
+      flex-basis: 60%;
       margin-left: 2.5rem;
+      justify-content: flex-start;
       .img-container {
+        width: 98px;
+        min-width: 98px;
+        align-self: center;
         .header-logo {
-          width: 120px;
+          width: 100%;
           cursor: pointer;
         }
       }
       .title {
         text-align: center;
-        padding: 0.6rem;
-        font-size: 1.3rem;
+        align-self: center;
+        margin-left: 1rem;
+        font-size: 1.2rem;
+        width: 217px;
         color: $primary-dark-blue-color;
       }
     }
     .convertor-div {
       display: flex;
-      flex-basis: 41%;
-      margin-left: 14%;
+      flex-basis: 40%;
+      justify-content: space-around;
       .booking {
-        margin-right: 5rem;
         width: 10rem;
         color: $primary-dark-blue-color;
-        font-size: 1.3rem;
-        padding-top: 0.6rem;
+        align-self: center;
+        font-size: 1.2rem;
+        cursor: pointer;
+      }
+      .language-container{
+        display: flex;
+        .header-select{
+          align-self: center;
+        }
       }
       .lang-icon {
         margin-top: 0.8rem;
@@ -50,7 +63,7 @@
       .header-select {
         border: none;
         background-color: $white-color;
-        margin-right: 5rem;
+        align-self: center;
         -webkit-appearance: none;
         -moz-appearance: none;
         text-indent: 1px;
@@ -62,9 +75,10 @@
         }
       }
       .login-btn {
+        align-self: center;
         background-color: $primary-dark-blue-color!important;
         color: $white-color!important;
-        padding: 1rem 2rem!important;
+        padding: 1rem 5%!important;
         border-radius: 5px!important;
         font-size: 0.8rem!important;
         width: 7rem!important;
