--- a/src/components/LandingPage/LandingPage.scss
+++ b/src/components/LandingPage/LandingPage.scss
@@ -9,7 +9,7 @@
   margin-top: 0;
   padding-top: 2rem;
   .form {
-    width: 25%;
+    width: 30rem;
     background-color: $white-color;
     border: 1px solid black;
     margin: 1rem 4rem;
