Fixed minor bugs

--- a/src/components/BookingPage/BookingPage.scss
+++ b/src/components/BookingPage/BookingPage.scss
@@ -1,3 +1,6 @@
+.login-container{
+    min-height: calc(100vh - 84px - 84px)!important;
+}
 .container-booking{
     margin-bottom: 2%!important;
     margin-top: 2%!important;
