--- a/src/components/LandingPage/CalenderDropdown/Calender.scss
+++ b/src/components/LandingPage/CalenderDropdown/Calender.scss
@@ -107,6 +107,7 @@
   margin-right: 10%;
   margin-bottom: 1vh;
   margin-top: -2rem;
+  border-radius: 5px;
 }
 .apply-dates-button:disabled {
   opacity: 0.4;
