--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables.scss";
 
 .footer-container {
-  position: fixed;
+  position: sticky;
   bottom: 0;
   width: 100%;
   height: 84px;
