--- a/src/components/BookingConfirmation/Confirmation.scss
+++ b/src/components/BookingConfirmation/Confirmation.scss
@@ -1,36 +1,59 @@
 @import "../../styles/variables.scss";
 
+.container-booking-conf {
+  min-height: calc(100vh - 84px - 84px);
+}
 .confirmation-header {
   display: flex;
   justify-content: space-between;
   margin: 1% 10%;
+  @media (max-width: 800px) {
+    flex-direction: column;
+  }
   .confirmation {
     font-size: 1.5rem;
+    @media (max-width: 1000px) {
+      font-size: 1.2rem;
+    }
   }
   .confirmation-btn {
     display: flex;
     width: 7%;
+    @media (max-width: 600px) {
+      width: 100%;
+      justify-content: space-between;
+    }
     .print-btn {
       padding-right: 20%;
       font-size: 1rem;
       color: $confirmation-btn-blue;
       margin-top: 10%;
       cursor: pointer;
+      @media (max-width: 600px) {
+        margin-top: 1%;
+        margin-left: 1%;
+      }
     }
     .email-btn {
       font-size: 1rem;
       color: $confirmation-btn-blue;
       margin-top: 10%;
       cursor: pointer;
+      @media (max-width: 600px) {
+        margin-top: 1%;
+        margin-right: 1%;
+      }
     }
   }
 }
 .confirmation-container {
   border: 2px solid $checkout-border-grey;
   margin: 1% 10%;
-  margin-bottom: 9.2%;
   .confirmation-container-room-detail {
     display: flex;
+    @media (max-width: 1000px) {
+      flex-direction: column;
+    }
     .room-type {
       width: 30rem;
       margin: 1% 3%;
@@ -48,19 +71,32 @@
       margin-top: 1.5%;
       color: $confirmation-btn-blue;
       cursor: pointer;
+      @media (max-width: 1000px) {
+        margin-left: 3%;
+      }
     }
   }
   .room-info {
     display: flex;
+    @media (max-width: 1000px) {
+      flex-direction: column;
+    }
     .room-img {
       margin: 2%;
       width: 28%;
+      @media (max-width: 1000px) {
+        width: 96%;
+        margin: 2%;
+      }
     }
     .booking-info {
       margin: 2%;
       flex-basis: 60%;
       .date-container {
         display: flex;
+        @media (max-width: 1000px) {
+          justify-content: center;
+        }
         .date-box {
           border: 2px solid $checkout-border-grey;
           text-align: center;
@@ -69,35 +105,42 @@
           margin-right: 3%;
         }
       }
-      .promotion-title{
+      .promotion-title {
         margin: 2% 0 1% 0;
         font-weight: bold;
       }
-      .booking-total{
+      .booking-total {
         display: flex;
         margin-top: 3%;
         justify-content: space-between;
+        @media (max-width: 1000px) {
+          flex-direction: column;
+        }
       }
     }
   }
 }
-.booking-detail{
+.booking-detail {
   display: flex;
   justify-content: space-between;
   margin: 0.5% 2%;
+  @media (max-width: 600px) {
+    margin: 0.5% 1%;
+    font-size: 0.9rem;
+  }
 }
-.typography{
+.typography {
   padding-left: 2%;
-  font-weight: bold!important;
+  font-weight: bold !important;
 }
 .accordion-containe {
   border-style: none !important;
   box-shadow: none !important;
   border-top: 1px solid $border-line-grey !important;
-  margin: 0 2%!important;
+  margin: 0 2% !important;
 }
-.summary{
-  flex-direction: row-reverse!important;
+.summary {
+  flex-direction: row-reverse !important;
 }
 .accordion-container:last-child {
   border-bottom: none !important;
@@ -108,22 +151,30 @@
 .MuiButtonBase-root {
   border-bottom: 1px solid $black;
 }
-.cancel-input{
-  margin: 4%  0.5%;
+.cancel-input {
+  margin: 4% 0.5%;
   padding: 2%;
 }
-.btn-otp{
-  background-color: $primary-dark-blue-color!important;
-  width: 150px!important;
-  padding: 2% 1%!important;
-  margin-left: 185px!important;
+.btn-otp {
+  background-color: $primary-dark-blue-color !important;
+  width: 150px !important;
+  padding: 2% 1% !important;
+  margin-left: 185px !important;
 }
-.btn-cancel{
-  background-color: $primary-dark-blue-color!important;
-  width: 150px!important;
-  padding: 2% 0.5%!important;
-  margin: 3%!important;
+.btn-cancel {
+  background-color: $primary-dark-blue-color !important;
+  width: 150px !important;
+  padding: 2% 0.5% !important;
+  margin: 3% !important;
 }
-.error-otp{
+.error-otp {
   color: red;
+}
+.total-price {
+  @media (max-width: 1000px) {
+    margin-top: 2%;
+    font-weight: bold;
+    text-align: end;
+    margin-right: 4% !important;
+  }
 }
