--- a/src/components/LandingPage/CalenderDropdown/Calender.scss
+++ b/src/components/LandingPage/CalenderDropdown/Calender.scss
@@ -1,4 +1,4 @@
-@import '../../../styles/variables.scss';
+@import "../../../styles/variables.scss";
 
 .calender {
   box-sizing: border-box;
@@ -11,7 +11,11 @@
   align-items: center;
   justify-content: center;
   border-radius: 5px;
-  font-family: popins!important;
+  font-family: popins !important;
+  @media (max-width: 600px) {
+    margin-left: 82px;
+    margin-top: 25px;
+  }
   /* display: absolute;
     top: 10%; */
 }
@@ -108,6 +112,10 @@
   margin-bottom: 1vh;
   margin-top: -2rem;
   border-radius: 5px;
+  @media (max-width: 600px) {
+    width: 80%;
+    height: 50px;
+  }
 }
 .apply-dates-button:disabled {
   opacity: 0.4;
@@ -117,8 +125,11 @@
   max-width: 25%;
   align-self: flex-end;
   margin-right: 10%;
+  @media (max-width: 600px) {
+    display: inline;
+  }
 }
-.calender-footer-price{
+.calender-footer-price {
   max-width: 25%;
   align-self: flex-end;
   margin-right: 10%;
@@ -127,4 +138,3 @@
   background-color: $primary-dark-blue-color;
   color: $white !important;
 }
-
